refactor: replace isEmpty with isBlank for whitespace-safe input validation in RoomResource